# rust-on-embedded-2025

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
examples/: 0_hello.rs  1_blink_block.rs  2_blink_interrupt.rs  3_blink_async.rs  4_button_block.rs  5_button_interrupt.rs  6_button_async.rs  7_button_rtic.rs  8_button_rtic_shared.rs
src/: main.rs
